I decided I'd change some stuff.

--- a/src/main/resources/assets/unknownmagic/lang/en_US.lang
+++ b/src/main/resources/assets/unknownmagic/lang/en_US.lang
@@ -6,4 +6,4 @@ item.white_stone.name=White Stone Dust
 item.minerals.name=Minerals
 
 # Item Groups
-itemGroup.unknownmagic=Unknown Magic
+itemGroup.unknownmagic=That Sweet Sweet Magic
