Overall: This commit houses the Tome Of Allure book with a simple Gui. Specifics: In this commit I added the Gui Handler for the Mod as well as a super basic and ugly looking GuiTomeOfAllure class which is intended to be fixed in the future. Along with these comes the assets of the Tome of Allure as well as the ItemAllureTome Class and many other additions from gui buttons to minor syntax and name changes. More packages have been added and some class names have changed also.

--- a/src/main/resources/assets/unknownmagic/lang/en_US.lang
+++ b/src/main/resources/assets/unknownmagic/lang/en_US.lang
@@ -4,6 +4,7 @@ tile.ancient_brick.name=Ancient Brick
 # Items
 item.white_stone.name=White Stone Dust
 item.minerals.name=Minerals
+item.tome_of_allure.name=The Tome Of Allure
 
 # Item Groups
 itemGroup.unknownmagic=Unknown Magic
